<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/ivStudent"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="student image"
        android:src="@drawable/student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/student_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivStudent"
        app:layout_constraintTop_toTopOf="@id/ivStudent"
        app:layout_constraintEnd_toStartOf="@id/cbSelected" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_123456789"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/cbSelected" />

    <CheckBox
        android:id="@+id/cbSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/btnEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingHorizontal="12dp"
        android:text="@string/edit"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingHorizontal="12dp"
        android:text="@string/delete1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
